<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContainerActivity">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayuot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profileTab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/matchesTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matchesTab" />
        />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/settingsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsTab" />
        />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.viewpager.widget.ViewPager>
</LinearLayout>